--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,18 @@
 .back-sizer{
     height:600px;
     border:2px solid black;
+
+    background-image: url("../images/puppy-full.jpg");
+    background-size: contain;
+    /* contain make the whole background image fit inside the element cover ensures the backgroung image covers the entire element */
+    background-size: 150%;
+    /* with bacckground size you can also set a specific size in px or em or other units */
+
+    /* background posistion lets you change whitch part of the images is visibale, or changethe anchor point */
+    background-position:70% center;
+    /* you can use a relative position, like center, left, right, top or bottom. you can also set a specific position using px or % or other units the order is horizontal position, vertical position */
+    /* background repeat controls how the image repeats */
+    background-repeat: no-repeat;
 }
 
 .test2 img{
